--- a/style.css
+++ b/style.css
@@ -149,15 +149,18 @@ p:last-child{
     padding: 11px 0 32px;
 }
 .user-wrap {
-    margin-bottom: 20px;
+    text-align: center;
+    max-width: 267px;
+    margin: 0 auto 20px;
 }
 .user-thumb {
     width: 112px;
     height: 112px;
     overflow: hidden;
     border-radius: 100%;
-    margin-bottom: 6px;
+    margin: 0 auto 6px;
 }
+
 .user-thumb img{
   width: 100%;
   height: 100%;
