--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@ body {
   line-height: 14px;
   color: #000;
   background-color: #A6A6A6;
+  overflow-x: hidden;
   word-wrap: break-word;
   word-break: normal;
   overflow: hidden;
